frontend/tmc-react/uat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tmc-react-svc
  namespace: uat
spec:
  selector:
    app: tmc-react
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
