frontend/tmc-react/uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: uat-redirect@kubernetescrd
  labels:
    app: tmc-react-http-redirect
  name: tmc-react-http-redirect
  namespace: uat
spec:
  rules:
    - host: tmc-uat.tripota.com.vn
      http:
        paths:
          - backend:
              service:
                name: tmc-react-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app: tmc-react
  name: tmc-react
  namespace: uat
spec:
  rules:
  - host: tmc-uat.tripota.com.vn
    http:
      paths:
      - backend:
          service:
            name: tmc-react-svc
            port: 
              number: 80
        path: /
        pathType: Prefix  
  tls:
  - hosts:
    - tmc-uat.tripota.com.vn
    secretName: tmc-react-tls
